// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-dekstop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Rent"
      id="1"
      key="1"
      note="test"
    />
    <ExpenseListItem
      amount={2000}
      createdAt={-864000000}
      description="Groceries"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4}
      createdAt={864000000}
      description="Water"
      id="3"
      key="3"
      note="test 2"
    />
  </div>
</div>
`;

exports[`should render ExpenseList without expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-dekstop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
